# observer-design-pattern-in-c

./: .gitignore  CMakeLists.txt  README.md
include/observer/: iobserver.h  isubject.h  observer.c  observer.h  subject.h
include/wordsHandler/: wordCounter.c  wordCounter.h
scripts/: build.sh  clean.sh  run_tests.sh  update_dependencies.sh
src/: main.c
test/: observer.functionalities.test.c  observer.structure.test.c  observer.test.c  subject.structure.test.c  wordCounter.test.c
